<resources>
    <string name="app_name">PokeApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Usuário</string>
    <string name="my_pokemons">Meus Pokemons</string>
    <string name="home">Início</string>
    <string name="hp">HP</string>
    <string name="cp">CP</string>
    <string name="ev">EV</string>
    <string name="captured_date">Data de captura</string>
    <string name="report">Relatório</string>
    <string name="win">Ganhou</string>
    <string name="lose">Perdeu</string>
    <string name="signin_other_error">Não foi possível logar com a conta Google</string>
    <string name="leaderboard">Placar</string>
    <string name="search_player">Buscar jogador</string>
    <string name="undo">Desfazer</string>
    <string name="redo">Refazer</string>
    <string name="pokemon_saved">Pokemon salvo</string>
    <string name="remove">Remover</string>
    <string name="name">Nome</string>
    <string name="a_wild_pokemon_appears">Um selvagem %s apareceu</string>
    <string name="greefield">Campo</string>
    <string name="ok">Ok</string>
    <string name="choose_name">Escolha um nome</string>
    <string name="cancel">Cancelar</string>
</resources>

